--- a/debug-configuration/debug.conf
+++ b/debug-configuration/debug.conf
@@ -56,7 +56,7 @@ object Service "Ruby version" {
 }
 
 object CheckCommand "diagnostics_env" {
-  command = "echo 'Enivronment of user' ; env"
+  command = "echo 'Environment of user' ; env"
 }
 
 object CheckCommand "diagnostics_ls" {
