clean debug configuration for icinga 2
make configuration more according to best practices
fixes #81

--- a/debug-configuration/debug.conf
+++ b/debug-configuration/debug.conf
@@ -56,40 +56,81 @@ object Service "Ruby version" {
 }
 
 object CheckCommand "diagnostics_env" {
-  command = "echo 'Environment of user' ; env"
+  command = [ "/bin/env" ]
 }
 
 object CheckCommand "diagnostics_ls" {
-  command = "ls $ls_path$"
+  command = [ "/bin/ls" ]
+  arguments = {
+    "--path" = {
+      value = "$ls_path$"
+      description = "The path to check for permissions"
+      skip_key = true
+      required = true
+      order = -1
+    }
+  }
   vars.ls_path = "/usr/lib64/nagios/plugins"
 }
 
-// This uses no path on purpose to use the standard perl Icinga uses
+// This uses no path on purpose to use the standard binary Icinga uses
 
 object CheckCommand "diagnostics_perl_version" {
-  command = "perl --version"
+  command = [  "perl" ]
+  arguments = {
+    "--version" = {
+      set_if = true
+    }
+  }
 }
 
+// This uses no path on purpose to use the standard binary Icinga uses
+
 object CheckCommand "diagnostics_perl_include_path" {
-  command = "perl -e 'print qq(@INC)'"
+  command = [ "perl" ]
+  arguments = {
+    "-e" = {
+      value = "print qq(@INC)"
+    }
+  }
 }
 
 object CheckCommand "diagnostics_icinga_user" {
-  command = "/bin/whoami"
+  command = [ "/bin/whoami" ]
 }
 
 object CheckCommand "diagnostics_executing_host" {
-  command = "/bin/uname -n"
+  command = [ "/bin/uname" ]
+  arguments = {
+    "-n" = {
+      set_if = true
+    }
+  }
 }
 
 object CheckCommand "diagnostics_python2_version" {
-  command = "python --version"
+  command = [ "python" ]
+  arguments = {
+    "--version" = {
+      set_if = true
+    }
+  }
 }
 
 object CheckCommand "diagnostics_python3_version" {
-  command = "python3 --version"
+  command = [ "python3" ]
+  arguments = {
+    "--version" = {
+      set_if = true
+    }
+  }
 }
 
 object CheckCommand "diagnostics_ruby_version" {
-  command = "ruby --version"
+  command = [ "ruby" ]
+  arguments = {
+    "--version" = {
+      set_if = true
+    }
+  }
 }
